# epicycles

./: .gitignore  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  hlint.yaml  imgui.ini  maths.typ  result  vector-dsl.cabal
.github/workflows/: lean_action_ci.yml  nix-build.yml
app/: BenchMetrics.hs  Benchmark.hs  Main.hs
proofs/: Epicycles.lean  lake-manifest.json  lakefile.lean
proofs/Epicycles/: AST.lean  Delta.lean  Env.lean  Eval.lean  Update.lean
proofs/Epicycles/FuseDM/: AST.lean  Delta.lean  Eval.lean  Properties.lean  Update.lean
slides/: main.typ  references.bib
src/: AST.hs  Alphabet.hs  Compiler.hs  Curve.hs  Delta.hs  Entrypoint.hs  Layout.hs  Prelude.hs  Pretty.hs  PrettyAST.hs  Scene.hs  Unembedding.hs  Vec.hs
src/AST/: Instances.hs
src/GUI/: Colour.hs  Config.hs  ImguiCodePanel.hs  ImguiInteraction.hs  ImguiMain.hs  ImguiRender.hs  ImguiUtils.hs  State.hs  Types.hs  Util.hs  Viewport.hs
src/Unembedding/: Env.hs
src/Update/: Delta.hs  SnS.hs  Types.hs
src/Update/SnS/: Common.hs  Heuristic.hs  Naive.hs
test/: AmbiguityStressSpec.hs  ExprShapeSpec.hs  ExprUpdateSpec.hs  FuseDMSpec.hs  Gen.hs  SceneSpec.hs  Utils.hs
writing/: .gitignore  DissertationTemplate.bak0  DissertationTemplate.bak1  DissertationTemplate.bak2  DissertationTemplate.bak3  DissertationTemplate.bak4  DissertationTemplate.tex  dissertation.cls  dtklogos.sty  imgui.ini  references.bak0  references.bak1
writing/data/: benchmark.csv
writing/figures/: pipeline.tex
